# PythonUtilities

./: README.md
File_Modifier_App/: pyproject.toml
File_Modifier_App/src/file_modifier_app/: __main__.py  cli.py  file_modifier.py
PyTemplates/: cli_template.py  file_modifier.py  main_menu_template.py  simpleSerialPorts_template.py  simple_serial_ports_template.py
VComPortLoopback/: README.md  pyproject.toml
VComPortLoopback/src/vcomportloopback/: __init__.py  __main__.py  cli.py  serialLoopback.py
VComPortLoopback/test/: test_noExceptions.py
requests_utils/: README.md  main.py  pyproject.toml
