[project]
name = "file-modifier-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rhod-Thomas", email = "engineer_rod@hotmail.co.uk" }
]
requires-python = ">=3.10"
dependencies = [
    "pathlib>=1.0.1",
]

[project.scripts]
run_app = "file_modifier_app.__main__:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

